# zephyr

arch/arm/core/cortex_m/: cpu_idle.S
bee/rtl8752h/osif/zephyr/: osif_zephyr.c
boards/arm/rtl8762gn_evb/: rtl8762gn_evb-pinctrl.dtsi
drivers/bluetooth/hci/: Kconfig  hci_rtl87x2g.c
drivers/flash/: flash_rtl8752h.c
drivers/pwm/: pwm_rtl87x2g.c
dts/arm/realtek/: rtl8752h.dtsi
include/zephyr/: spinlock.h
include/zephyr/arch/arm/: asm_inline_gcc.h
kernel/: fatal.c  idle.c  thread.c  timeout.c
lib/libc/common/: CMakeLists.txt
samples/bluetooth/central/: prj.conf
samples/bluetooth/central/src/: main.c
samples/bluetooth/central_hr/: prj.conf
samples/bluetooth/central_hr/src/: main.c
samples/bluetooth/mesh/: CMakeLists.txt  prj.conf
samples/bluetooth/mesh/boards/: rtl8752htv_evb.overlay  rtl8762gn_evb.conf  rtl8762gn_evb.overlay
samples/bluetooth/mesh/src/: board.c  main.c  save_cpu_state.h
samples/bluetooth/mesh_provisioner/: prj.conf
samples/bluetooth/mesh_provisioner/boards/: rtl8752htv_evb.overlay  rtl8762gn_evb.overlay
samples/bluetooth/mesh_provisioner/src/: main.c
samples/bluetooth/peripheral/: prj.conf
subsys/bluetooth/: Kconfig.logging
subsys/bluetooth/common/: Kconfig
subsys/bluetooth/host/: CMakeLists.txt  Kconfig  adv.c  conn.c  hci_core.c  id.c  scan.c
subsys/bluetooth/mesh/: adv.c  adv.h  adv_legacy.c  app_keys.c  beacon.c  cdb.c  cfg_cli.c  main.c  msg.c  pb_gatt.c  pb_gatt_srv.c  prov_device.c  provisioner.c  settings.c  transport_legacy.c
subsys/net/: buf.c
subsys/settings/src/: settings.c  settings_store.c
(+5 files in other folders)
